I have added the New header in index.html

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <title> this is my first project in GIT</title>
 <h1>This is my awesome project </h1>
 <p> Welcome, I hope you enjoyed my Website </p>
+<p>  am adding new header</p>
 <p> :-) X) :--(  :D  </p>
 </html>
