--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
 <p> Welcome, I hope you enjoyed my Website </p>
 <p>  am adding new header</p>
 <p> :-) X) :--(  :D  </p>
+<p> Adding new faeature</p>
 </html>
